# pico41

./: README.md
firmware/: CMakeLists.txt  CMakeLists.txt~  CmakeLists.txt~  embed_advantage.sh  embed_games.sh  embed_math.sh  embed_time_3b.sh  embed_zenrom.sh  flash_code.sh  flash_code.sh~  pico-41.c~  pico41.c  pico41.c~
pcb/: file6237E6E6.sch-bak  fp-info-cache  pico41-cache.lib  pico41.kicad_pcb  pico41.kicad_pcb-bak  pico41.sch  pico41.sch-bak
pcb/fab1/: errata_pico41_fab1  pico41-B_Cu.gbr  pico41-B_Mask.gbr  pico41-B_Paste.gbr  pico41-B_SilkS.gbr  pico41-Edge_Cuts.gbr  pico41-F_Cu.gbr  pico41-F_Mask.gbr  pico41-F_Paste.gbr  pico41-F_SilkS.gbr  pico41-NPTH-drl_map.ps  pico41-NPTH.drl  pico41-PTH-drl_map.ps  pico41-PTH.drl
tools/: .#embed_41c_rom_in_emulator.tcl  embed_41c_rom_in_emulator.tcl  embed_stroked_program.tcl  moonphase.stroke.txt  pico41.c
